<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-struna</string>
    <string name="action_settings">Settings</string>
    <string name="activity_news_name">News</string>
    <string name="activity_categories_name">Categories</string>
    <string name="activity_product_list_name">Product List</string>
    <string name="activity_product_details_name">Product Details</string>
    <string name="activity_product_photo_name">Product Photo</string>
    <string name="activity_product_description_name">Long Product Description</string>
    <string name="activity_contact_name">Contact</string>
    <string name="no_internet_connection_long">No internet connection available.</string>
    <string name="no_internet_connection_short">No internet.</string>
    <string name="no_product_news_category">No products in news category.</string>
    <string name="no_product_default_category">No products in selected category.</string>
    <string name="no_photo">No photo.</string>
    <string name="full_description">Full description</string>
    <string name="product_id">ID</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Description:</string>
    <string name="product_price">Price</string>
    <string name="product_coinage">pln</string>
    <string name="category">Category</string>
    <string name="webpage_title">e-struna.pl</string>
</resources>
