<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_height="109dp" >

    <LinearLayout 
        android:id="@+id/linearLayout_imageView"
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="105dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp" >
        
        <View
			android:layout_width="100dp"
			android:layout_height="1dp"
			android:background="@android:color/darker_gray" />
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="100dp"
            android:layout_height="102dp" >
            
            <View
			    android:layout_width="1dp"
			    android:layout_height="match_parent"
			    android:background="@android:color/darker_gray" />
            
            <ImageView
	            android:layout_height="102dp"
	            android:layout_width="97dp"
	            android:id="@+id/product_imageView"
	        	android:src="@drawable/blank" />

            <View
			    android:layout_width="1dp"
			    android:layout_height="match_parent"
			    android:background="@android:color/darker_gray" />
            
        </LinearLayout>
        
        <View
			android:layout_width="100dp"
			android:layout_height="1dp"
			android:background="@android:color/darker_gray" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/product_textViewIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:text="@string/product_id" />
    
    <TextView
        android:id="@+id/product_textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_textViewIndex"
        android:layout_toRightOf="@+id/linearLayout_imageView"
        android:layout_marginRight="5dp"
        android:paddingLeft="2dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/product_textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/linearLayout_imageView"
        android:layout_alignParentBottom="true"
        android:paddingLeft="2dp"
        android:text="@string/product_price" />

</RelativeLayout>