<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <!-- title part -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/background_orange" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/background_orange" />

        <!-- Image part -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:orientation="horizontal" >

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="277dp"
                    android:layout_height="280dp"
                    android:orientation="vertical" >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="275dp"
                        android:layout_height="277dp"
                        android:orientation="vertical"
                        android:padding="20dp" >

                        <ImageView
                            android:id="@+id/photoImageButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/blank" />

                        <LinearLayout
                            android:id="@+id/progressBarLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal" >

                            <ProgressBar
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" >
                            </ProgressBar>
                        </LinearLayout>
                        
                        <LinearLayout
                            android:id="@+id/noInternetLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal" >

                            <TextView 
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/no_internet_connection_short" />
                        </LinearLayout>
                        
                        <LinearLayout
                            android:id="@+id/noPhotoLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal"
                            android:visibility="visible" >

                            <TextView 
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:text="@string/no_photo" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <!-- Bottom table part -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/background_orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <ImageButton
                    android:id="@+id/navigationNewsButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/news_black_128" />

                <ImageButton
                    android:id="@+id/navigationCategoriesButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/categories_black_128" />

                <ImageButton
                    android:id="@+id/navigationWebpageButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/webpage_black_128" />

                <ImageButton
                    android:id="@+id/navigationContactButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/contact_black_128" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/product_price"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/background_orange" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/product_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textViewShortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/product_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <Button
                            android:id="@+id/longDescriptionButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/background_light"
                            android:padding="10dp"
                            android:text="@string/full_description"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/background_orange" />
    </LinearLayout>

</ScrollView>